[package]
name = "cachetable"
version = "0.1.0"
edition = "2021"


[dependencies]
cityhasher = { version = "0.1.0", default-features = false }
libc = "0.2"
anyhow = "1.0.97"
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "access"
harness = false
